--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700;800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
   background-color: rgb(77, 46, 7);
+  text-align: center;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  overflow: auto;
+}
+
+.h-100 {
+  height: 100vh;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.d-flex {
+  display: flex;
 }
 
 .cover-container {
   max-width: 42em;
+  padding: 1rem;
+  margin-right: auto;
+  margin-left: auto;
+  flex-direction: column;
+}
+
+.content {
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 header img {
     width: 50%;
 }
 
+.lead {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+form [type=text], [type=email] {
+  width: 15rem;
+  height: 1.8rem;
+}
+
 .form-floating {
     margin: 10px 0 20px 0;
 }
 
-.btn-secondary,
+.btn {
+  display: inline-block;
+  font-weight: 700;
+  line-height: 1.5;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  background-color: rgb(63, 25, 0);
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+  color: rgb(255, 255, 255);
+  text-shadow: none;
+  background-color: rgb(150, 60, 0);
+}
+
+footer {
+  margin-top: 5%;
+}
+
+@media (min-width: 576px) {
+  body {
+    overflow: auto;
+  }
 }
